--- a/shared.css
+++ b/shared.css
@@ -1,3 +1,8 @@
+.narrow-width {
+	width: 90%;
+	margin: 0 auto;
+}
+
 .utility-header-container {
 	position: fixed;
 	top: 0;
@@ -35,4 +40,13 @@
 .utility-text {
 	text-transform: uppercase;
 	font-size: 0.75em;
+}
+
+.header-nav-container {
+	height: 155px;
+	margin-top: 45px;
+}
+
+.industry-nav {
+
 }
