--- a/shared.css
+++ b/shared.css
@@ -79,9 +79,11 @@
 	height: 55px;
 	float: right;
 	display: inline-block;
+	padding-top: 15px;
 }
 
 .primary-nav-item {
 	float: right;
+	margin: 0 10px 0 40px;
 }
 
