--- a/shared.css
+++ b/shared.css
@@ -27,6 +27,7 @@
 }
 
 .utility-item {
+	position: relative;
 	height: 40px;
 	float: left;
 }
@@ -50,6 +51,13 @@
 .utility-text {
 	text-transform: uppercase;
 	font-size: 0.6em;
+}
+
+.utility-item-menu {
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	transform: translateX(-50%;);
 }
 
 .header-nav-container {
